test/src/e2e_vm_tests/test_programs/should_fail/superabi_unimplemented/src/main.sw
contract;

abi MySuperAbi {
    fn super_abi_method();
}

abi MyAbi : MySuperAbi {
    fn abi_method();
}

// The implementation of MyAbi for Contract must also implement MySuperAbi
// impl MySuperAbi for Contract {
//   ...
// }

impl MyAbi for Contract {
    fn abi_method() { }
}
